--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 ###############################################################################################
+
+/backend/myenv/
+/backend/*.sqlite
+/backend/__pycache__/
