--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 pycparser==2.19
+PyJWT==1.7.1
 python-http-client==3.1.0
 sendgrid==6.0.5
 six==1.12.0
