--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
