ER diagram added

--- a/backend/sendgrid.env
+++ b/backend/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='YOUR_API_KEY'
